Logo back in header.. need to connect searchbar to fix gap.

--- a/src/index.css
+++ b/src/index.css
@@ -186,11 +186,13 @@ main {
   font-weight: 300;
   color: #333;
   text-shadow: 5px 5px #333 (0, 0, 0, 0.5);
+  width: 100%;
 }
 
 .hejweatherlogo {
   width: 30%;
   height: auto;
+  max-width: 200px;
 }
 
 /* Media Queries for Small Devices */
